# NarrativeTensorExplorer

./: .gitignore  README.md  build.gradle.kts  build_all.bat  check_names.bat  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android-build.yml  android_build.yml  codeql-analysis.yml
app/: build.gradle.kts  proguard-rules-debug.pro  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/ java/com/meaning/app/: AppView.kt  MainActivity.kt  MainApplication.kt  MeaningAppTheme.kt
app/src/main/ java/com/meaning/app/app/: MainActivity.kt
app/src/main/ java/com/meaning/app/db/: Converters.kt  Extensions.kt  NarrativeConnectionDao.kt  NarrativeConnectionEntity.kt  NarrativeConnectionRepository.kt  NarrativeDao.kt  NarrativeDatabase.kt  NarrativeEntity.kt  QuantizedNarrativeEntity.kt  SearchResult.kt
app/src/main/ java/com/meaning/app/kernel/: MapMetrics.kt  Narrative3DGestureController.kt  NarrativeConnection.kt  NarrativeDataModels.kt  NarrativeDatabase.kt  NarrativeKernel.kt  NarrativeMap3D.kt  NarrativeRepository.kt  QuantizationEngine.kt  SearchResult.kt
app/src/main/ java/com/meaning/app/ui/: CameraInfoOverlay.kt  ControlOverlay.kt  DimensionForestView.kt  EntityDetailPanel.kt  NarrativeMap3DView.kt  ProjectedPoint.kt  VisualToken.kt
app/src/main/cpp/: CMakeLists.txt  meaning-kernel.cpp  meaning_kernel.cpp
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
benchmark/: build.gradle.kts
benchmark/src/androidTest/java/com/meaning/app/benchmark/: ComposeUIBenchmark.kt  NarrativeKernelBenchmark.kt  QuantizationBenchmark.kt  test-config.json
scripts/: analyze-apk.sh  build-native.sh  test-neon.sh
